--- a/requirements.txt
+++ b/requirements.txt
@@ -43,9 +43,9 @@ setuptools==80.9.0
 shiboken6==6.9.1
 six==1.17.0
 sympy==1.14.0
-torch==2.7.1+cu118
-torchaudio==2.7.1+cu118
-torchvision==0.22.1+cu118
+torch
+torchaudio
+torchvision
 tqdm==4.67.1
 typing_extensions==4.14.0
 tzdata==2025.2
